// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transpile: ES2015 comments 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

function translate(value) {
  return _camelCase(value);
}"
`;

exports[`Transpile: ES2015 deadcode 1`] = `
"const STATIC = false;
before();
after();"
`;

exports[`Transpile: ES2015 es2015: classes 1`] = `
"export class Component extends Other {
  constructor() {
    super();
    this.flag = true;
  }

  main() {
    alert(this.foo);
  }

}"
`;

exports[`Transpile: ES2015 es2015: for_off 1`] = `
"function test() {
  for (const taskName of tasks) {
    try {
      executeCommands();
    } catch (error) {
      console.error(\\"Error\\");
    }
  }
}"
`;

exports[`Transpile: ES2015 es2015: generator 1`] = `
"function* idMaker() {
  var index = 0;

  while (true) yield index++;
}"
`;

exports[`Transpile: ES2015 es2015: set 1`] = `
"import \\"core-js/modules/web.dom.iterable\\";
import \\"core-js/modules/es6.array.iterator\\";
import \\"core-js/modules/es6.string.iterator\\";
import \\"core-js/modules/es6.set\\";
new Set([1, 2, 3]);"
`;

exports[`Transpile: ES2015 es2016: exponentiation 1`] = `"var result = 8;"`;

exports[`Transpile: ES2015 esnext: async 1`] = `
"function wait() {
  return new Promise(function ($return, $error) {
    return Promise.resolve(loadData()).then(function () {
      try {
        return $return();
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }, $error);
  });
}"
`;

exports[`Transpile: ES2015 esnext: async_loop 1`] = `
"function executeTasks(tasks) {
  return new Promise(function ($return, $error) {
    var $Loop_3_trampoline, $Loop_3_local;

    function $Loop_3_step() {
      var [taskName, $iterator_taskName_2] = $Loop_3_local();
      return $Loop_3.bind(this, taskName, $iterator_taskName_2);
    }

    function $Loop_3(taskName, $iterator_taskName_2) {
      $Loop_3_local = function () {
        return [taskName, $iterator_taskName_2];
      };

      if (!($iterator_taskName_2[1] = $iterator_taskName_2[0].next()).done && ((taskName = $iterator_taskName_2[1].value) || true)) {
        var $Try_1_Post = function () {
          try {
            return $Loop_3_step;
          } catch ($boundEx) {
            return $error($boundEx);
          }
        },
            $Try_1_Catch = function () {
          try {
            console.error(\\"Error\\");
            return $Try_1_Post();
          } catch ($boundEx) {
            return $error($boundEx);
          }
        };

        try {
          return Promise.resolve(executeCommands()).then(function () {
            try {
              return $Try_1_Post();
            } catch ($boundEx) {
              return $Try_1_Catch($boundEx);
            }
          }, $Try_1_Catch);
        } catch (error) {
          $Try_1_Catch(error)
        }
      } else return [1];
    }

    return ($Loop_3_trampoline = function (q) {
      while (q) {
        if (q.then) return void q.then($Loop_3_trampoline, $error);

        try {
          if (q.pop) {
            if (q.length) return q.pop() ? $Loop_3_exit.call(this) : q;else q = $Loop_3_step;
          } else q = q.call(this);
        } catch (_exception) {
          return $error(_exception);
        }
      }
    }.bind(this))($Loop_3.bind(this, void 0, [tasks[Symbol.iterator]()]));

    function $Loop_3_exit() {
      return $return();
    }
  });
}"
`;

exports[`Transpile: ES2015 esnext: class properties 1`] = `
"import _defineProperty from \\"@babel/runtime/helpers/builtin/es6/defineProperty\\";
export class Component {
  constructor() {
    _defineProperty(this, \\"onClick\\", () => {});
  }

}"
`;

exports[`Transpile: ES2015 esnext: dynamic import 1`] = `
"import(
/*webpackChunkName:'lodash-pst7t'*/
\\"lodash\\").then(lodash => {
  console.log(lodash.camelCase(\\"hello world\\"));
});"
`;

exports[`Transpile: ES2015 esnext: object spread 1`] = `
"import _objectSpread from \\"@babel/runtime/helpers/builtin/es6/objectSpread\\";

let original = {
  bar: 10
},
    variant = _objectSpread({
  foo: 1
}, original);"
`;

exports[`Transpile: ES2015 loadable 1`] = `
"import loadable from 'loadable-components';
export const Home = loadable(() => import(
/*webpackChunkName:'Home-bqRLr'*/
\\"./views/Home\\"), {
  modules: [\\"./views/Home\\"]
});
export const About = loadable(() => import(
/*webpackChunkName:'About-q5EMT'*/
\\"./views/About\\"), {
  modules: [\\"./views/About\\"]
});
export const Contact = loadable(() => import(
/*webpackChunkName:'Contact-Urv1P'*/
\\"./views/Contact\\"), {
  modules: [\\"./views/Contact\\"]
});"
`;

exports[`Transpile: ES2015 loadable magic-comments 1`] = `
"import loadable from 'loadable-components';
export const Home = loadable(() => import(
/*webpackChunkName:'Home-bqRLr'*/
\\"./views/Home\\"), {
  modules: [\\"./views/Home\\"]
});
export const About = loadable(() => import(
/* webpackChunkName: \\"About\\" */
\\"./views/About\\"), {
  modules: [\\"./views/About\\"]
});
export const Contact = loadable(() => import(
/*webpackMode:'lazy',webpackFoo:'bar',webpackChunkName:'Contact-Urv1P'*/
\\"./views/Contact\\"), {
  modules: [\\"./views/Contact\\"]
});"
`;

exports[`Transpile: ES2015 loadable wildcard 1`] = `
"import loadable from 'loadable-components';
const page = \\"About\\",
      lang = \\"de_DE\\";
export const views = loadable(() => import(
/*webpackChunkName:'views-[request]-eNKDf'*/
\`./views/\${page}\`), {
  modules: [\`./views/\${page}\`]
});
export const leanIntl = loadable(() => import(
/*webpackChunkName:'lean-intl-[request]-zd7G4'*/
\`./lean-intl/\${lang}/data\`), {
  modules: [\`./lean-intl/\${lang}/data\`]
});
export const reactIntl = loadable(() => import(
/*webpackChunkName:'react-intl-[request]-5gr63'*/
\`./react-intl/\${lang}/data\`), {
  modules: [\`./react-intl/\${lang}/data\`]
});"
`;

exports[`Transpile: ES2015 lodash: async 1`] = `
"import _parallel from \\"async/parallel\\";

_parallel([]);"
`;

exports[`Transpile: ES2015 lodash: lodash 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

_camelCase(\\"hello world\\");"
`;

exports[`Transpile: ES2015 lodash: recompose 1`] = `
"import _compose from \\"recompose/compose\\";

_compose([]);"
`;

exports[`Transpile: ES2015 react: jsx 1`] = `
"function render() {
  return React.createElement(\\"h1\\", null, \\"Hello\\");
}"
`;

exports[`Transpile: ES2015 react: jsx spread 1`] = `
"import \\"core-js/modules/es6.object.assign\\";

function render(props) {
  return React.createElement(\\"h1\\", Object.assign({
    className: \\"large\\"
  }, props), \\"Hello\\");
}"
`;

exports[`Transpile: ES2015 react: proptypes 1`] = `
"import React from \\"react\\";
import PropTypes from \\"prop-types\\";

class MyComponent extends React.Component {
  render() {
    return React.createElement(\\"div\\", null, this.props.userName);
  }

}

MyComponent.propTypes = {
  userName: PropTypes.string
};"
`;
